[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/levels/TestLevel.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/environment/background.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/environment/clouds.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/environment/ground.png" type="Texture" id=4]

[node name="TestLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="initPolygon" type="Polygon2D" parent="."]
texture = ExtResource( 4 )
polygon = PoolVector2Array( -709.826, 126.22, -636.058, 81.0628, -414.902, 64.3817, -415.115, 159.462, -286.468, 230.871, -108.646, 202.225, 8.45544, 283.196, 283.246, 366.069, 539.928, 394.659, 689.599, 344.769, 802.846, 268.925, 946.178, 362.587, 1202.42, 368.819, 1506.86, 240.384, 1811.29, 392.603, 1979.62, 373.278, 2090.09, 287.751, 2335.98, 220.043, 2347.23, 113.205, 2464.27, 81.0628, 2610.44, 102.436, 2643.88, 638.699, 2503.47, 1018.29, 2246.89, 1093.12, 1797.88, 1078.87, 1484.28, 897.126, 1217.01, 1043.23, 753.744, 968.398, 468.656, 1061.05, 233.459, 996.907, -133.591, 1103.81, -358.098, 829.418, -472.133, 683.31, -671.694, 572.839, -771.475, 419.604 )

[node name="Player1Position" type="Position2D" parent="."]
position = Vector2( 693.061, 289.99 )

[node name="Player2Position" type="Position2D" parent="."]
position = Vector2( 1592.07, 246.896 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_offset = Vector2( 0, -600 )
motion_mirroring = Vector2( 2400, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Sky"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
centered = false

[node name="CloudsFar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_offset = Vector2( 0, -500 )
motion_mirroring = Vector2( 2400, 900 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/CloudsFar"]
modulate = Color( 0.960784, 0.960784, 0.960784, 0.333333 )
scale = Vector2( 3, 2 )
texture = ExtResource( 3 )
centered = false

[node name="CloudsClose" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.2 )
motion_offset = Vector2( 0, -600 )
motion_mirroring = Vector2( 1600, 900 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/CloudsClose"]
modulate = Color( 1, 1, 1, 0.615686 )
scale = Vector2( 2, 1.5 )
texture = ExtResource( 3 )
centered = false
